send the last saved snapshot, otherwise save our shot to a temp file

BUG:258431